# nova-agent

./: CLAUDE.md  Cargo.toml  README.md
crates/nova-cli/: Cargo.toml
crates/nova-cli/src/: config.rs  main.rs  repl.rs
crates/nova-cli/tests/: integration_test.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: agent.rs  context.rs  lib.rs  permission.rs
crates/nova-core/src/llm/: anthropic.rs  mod.rs  openai_compat.rs
crates/nova-protocol/: Cargo.toml
crates/nova-protocol/src/: error.rs  lib.rs  message.rs  tool.rs  transport.rs
crates/nova-sandbox/: Cargo.toml
crates/nova-sandbox/src/: lib.rs
crates/nova-tools/: Cargo.toml
crates/nova-tools/src/: bash.rs  edit.rs  glob.rs  grep.rs  lib.rs  read.rs  registry.rs  write.rs
