[package]
name = "nova-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nova"
path = "src/main.rs"

[dependencies]
nova-protocol.workspace = true
nova-core.workspace = true
nova-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
crossterm.workspace = true
colored.workspace = true
toml.workspace = true
dirs.workspace = true
