[package]
name = "nova-core"
version.workspace = true
edition.workspace = true

[dependencies]
nova-protocol.workspace = true
nova-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true
tokio-stream.workspace = true
dashmap.workspace = true
