[package]
name = "nova-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
nova-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
